--- a/environment.yaml
+++ b/environment.yaml
@@ -1,8 +1,8 @@
 name: faq-extractor
 dependencies:
   - bert_score
-  - matplotlib
-  - jupyter
+  - evaluate
+  - datasets
   - openai
   - pandas
   - pip
@@ -10,6 +10,5 @@ dependencies:
   - scikit-learn
   - transformers
   - pip:
-    - evaluate==0.4.3
     - sentence-transformers
     - .
